Tweak font stack every so slightly to avoid jump on loading home page
On iPhone, loading the home page initially fell back to -apple-system or
helvetica, which caused the tag line to wrap one extra line. When Lato
loads from Typekit, it no longer needs to wrap, so all the content jumps
up.

"Avenir Next Condensed" does not wrap, so avoids the jump. Has good
support via http://iosfonts.com/

I don't have an Android device to test with unfortunately.

Desktop machines don't have this problem, there is plenty of horizontal
space to use.

--- a/src/_styles/_variables.scss
+++ b/src/_styles/_variables.scss
@@ -1,7 +1,7 @@
 // Font stacks are defined in _custom-bootstrap.scss, here we have our
 // our custom type ramp and some other useful values
 
-$font-family-sans-serif: "lato", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Droid Sans", "Helvetica Neue", Arial, sans-serif;
+$font-family-sans-serif: "lato", "Avenir Next Condensed", Roboto, "Droid Sans", Calibri, sans-serif;
 $font-family-sans-serif-metric-natural-line-height: (2233 + 599) / 2000; // ascender + descender
 $font-family-sans-serif-metric-baseline: 2233 / 2000; // distance in ems from top to baseline
 $font-family-sans-serif-metric-capheight: (2233 - 1457) / 2000; // distance in ems from top to cap height, (ascender - capheight)
